--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/Group 634.png">
     <title>brennan lo</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">brennan lo</a>
+      <a class="navbar-brand" href="about.html"><img class="b-logo" src="./images/b logo.svg"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,11 +23,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">portfolio <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+         <li class="nav-item"> 
             <a class="nav-link" href="about.html">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">resume</a>
+            <a class="nav-link" href="Resume 2020.pdf" target="_blank">resume</a>
           </li>
         </ul>
       </div>
@@ -42,12 +43,16 @@
          <div class="row projects">
           <div class="col-6">
             <a href="CSR.html"><img class="proj1" src="./images/wsib icon 2.png"></a>
-          </div>
+          </div> 
           <div class="col-6">
-            <a href="lab redesign.html"><img src="./images/wsib icon 1.png"></a>
+            <a href=""><img src="./images/wsib icon 1.png"></a>
+            <p class="body-text"><span id="soon-time">Coming Soon!</span></p>
           </div>
-        </div>
-   
+          </div>
+        </div> 
+        <footer>
+          <p id="footer-text">Designed and developed by <span id="footer-name">Brennan Lo</span></p>
+      </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
