typos + updated resume

--- a/CSR.html
+++ b/CSR.html
@@ -51,9 +51,9 @@
 
         <div class="overview">
             <h1 class="case-header">Overview</h1>
-            <p class="body-text">The Kitchener WSIB call center receives hundreds of calls daily. From those hundred 
+            <p class="body-text">The Kitchener WSIB call center receives hundreds of calls daily. From those
               calls, customer service representatives (<span id="csr">CSRs</span>) receive them, and help callers file insurance claims.
-               Currently, the system of processing insurance claim requires the completion of multiple templates,
+               Currently, the system of processing insurance claims requires the completion of multiple templates,
                 which is complicated, difficult to use, and unintuitive. </p>
                 <div class="row">
                   <div class="col-12">
