--- a/CSR.html
+++ b/CSR.html
@@ -195,7 +195,7 @@
     <div class="poc2">
       <h1 class="case-header">POC 2</h1>
       <p class="body-text">The second POC was used to merge the ESU and triage templates together. This was a step towards the goal of having one singular form as a single souce of truth instead of having multiple templates.</p>
-      <p class="body-text">Since these two templates already had content that was similar within it, it made a good first try at merging templates together. This would eliminate redundancies between using the two tempaltes and create a good starting point to merge the rest of the templates later on.</p>
+      <p class="body-text">Since these two templates already had content that was similar within it, merging these templates would act as a good starting point. This would eliminate redundancies between using the two tempaltes and create a good starting point to merge the rest of the templates later on.</p>
 
     </div>    
 
