projects portfolio added

--- a/CSR.html
+++ b/CSR.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="main-content">
              <div class="banner">
-                <img class="banner-pic" src="images/wsib icon 2.png">
+                <img class="banner-pic" src="images/CSR Template icon.jpg">
              </div>
         <div class="case-title">
             <h1 class="thicc"><span class="thicc-title">CSR Templates</span> — Streamlining insurance claim processes</h1>
@@ -44,6 +44,7 @@
             <div class="col-8">
                 <h5 class="case-space"><span class="case-colour">Company</span> / <span class="lcc">WSIB Innovation Lab</span></h5>
                 <h5 class="case-space"><span class="case-colour">Design</span> / <span class="lcc">Brennan Lo (me) & Christina Ru</span></h5>
+                <h5 class="case-space"><span class="case-colour">Development</span> / <span class="lcc">Jeff Talbot</span></h5>
                 <h5 class="case-space"><span class="case-colour">Tools</span> / <span class="lcc">Sketch & Invision</span></h5>
                 <h5 class="case-space"><span class="case-colour">Timeline</span> / <span class="lcc">3 Weeks</span></h5>
             </div>
@@ -59,6 +60,7 @@
                   <div class="col-12">
                       <img id="general-process" src="images/general claim flow.png">
                   </div>    
+        </div>
         </div>
 
         <div class="problem">
@@ -127,7 +129,8 @@
   <div class="empathize">
     <h1 class="case-header">Empathize</h1>
     <p class="body-text">From the information that was collected through our shadowing and interviews,
-       we synthesized user personas and user journey maps to aid in creating a solution that met the needs and goals of our customers.</p>
+       we synthesized user personas and user journey maps to aid in creating a solution that met the needs and goals of our users
+       .</p>
   </div>
 
 <div class="persona">
