--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mr-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">portfolio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">portfolio</a>
           </li>
          <li class="nav-item"> 
             <a class="nav-link" href="about.html">about</a>
@@ -32,21 +32,25 @@
         </ul>
       </div>
     </nav>
+
+    
       <div class="container-fluid">
         <div class="row hero">
-            <h1 class="my-name"><span class="name-colour">Hi! I'm Brennan.</span></h1>
+            <h1 class="my-name">Hi! I'm Brennan.</h1>
         </div>
         <div class="row intro">
            <h5 class="blurb">I'm a designer based in Toronto, and I'm currently studying my 3A term at the University of Waterloo.</h5>
-           <h5 class="blurb">You can find some of my previous work below!</h5>
+           <h5 class="blurb">Previously, I worked at the <span id="wsibIB">WSIB Innovation Lab.</span></h5>
          </div>
+
          <div class="row projects">
-          <div class="col-6">
-            <a href="CSR.html"><img class="proj1" src="./images/wsib icon 2.png"></a>
+          <div id="wsibproj1" class="col-6">
+            <a href="CSR.html"><img class="proj1" src="./images/CSR Template icon.jpg"></a>
+            <h5 id="csrtemp" class="body-text">Streamlining Insurance Claim Processes</h5>
           </div> 
-          <div class="col-6">
-            <a href=""><img src="./images/wsib icon 1.png"></a>
-            <p class="body-text"><span id="soon-time">Coming Soon!</span></p>
+          <div id="wsibproj2" class="col-6">
+            <a href="Projects Portfolio.html"><img class="proj1" src="./images/Projects portfolio icon 2.jpg"></a>
+            <h5 id="projport" class="body-text">Building a Space for WSIB Executives</h5>
           </div>
           </div>
         </div> 
@@ -56,6 +60,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
