projects portfolio image fix?

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h5 id="csrtemp" class="body-text">Streamlining Insurance Claim Processes</h5>
           </div> 
           <div id="wsibproj2" class="col-6">
-            <a href="Projects Portfolio.html"><img class="proj1" src="./images/Projects portfolio icon 2.jpg"></a>
+            <a href="Projects Portfolio.html"><img class="proj1" src="./images/Projects Portfolio icon 2.jpg"></a>
             <h5 id="projport" class="body-text">Building a Space for WSIB Executives</h5>
           </div>
           </div>
