PP icon fix again

--- a/Projects Portfolio.html
+++ b/Projects Portfolio.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="main-content">
              <div class="banner">
-                <img class="banner-pic" src="images/Projects portfolio icon 2.jpg">
+                <img class="banner-pic" src="images/Projects Portfolio icon 2.jpg">
              </div>
         <div class="case-title">
             <h1 class="thicc"><span class="thicc-title">Projects Portfolio</span> — Building a space for WSIB executives</h1>
