--- a/Projects Portfolio.html
+++ b/Projects Portfolio.html
@@ -54,22 +54,19 @@
             <h1 class="case-header">Overview</h1>
             <p class="body-text">
                 The WSIB Lab is always working on a variety of projects that are of interest to corporate WSIB executives. During monthly meetings,
-                 these projects are discussed in-depth with corporate executives in order to inform them of updates, possible next steps, and whether 
-                 or not there needs to be a pivot in terms of Lab work. 
+                 these projects are discussed in-depth with corporate executives in order to inform them of updates, next steps, and whether 
+                 or not there needs to be a pivot in terms of Lab work.  
             </p>
             <p class="body-text">
-                Currently, the only way to receive and view updates on projects outside of these meetings, is via email communication and our Lab website. 
+                However, there is a limited amount of time where corporate executives are able to receive updates and information about our Lab's projects.
+                Outside of monthly meetings, the only way for them to be informed of updates is via email communication.
             </p>
         </div>
         
         <div class="problem">
             <h1 class="case-header">Problem</h1>
-            <p class="body-text">Corporate executives have busy work lives, and need a quick and convenient way to view progress of the Lab's current projects.
-                The current methods of viewing projects outside of monthly meetings is limited since the Lab website only gives a general briefing of the state
-                of current projects. Communication through email is also not ideal since that would require waiting for a response from the Lab.
+            <p class="body-text">Corporate executives have busy work lives, and need a quick, convenient and easy way to view the Lab's current projects.
             </p>
-            <p class="body-text">Our design team needed to explore how we would build a solution that would give corporate executives an in-depth view 
-                of our projects and also be easily digestible and convenient to access.</p>
         </div>
         
         <div class="goal">
@@ -80,7 +77,7 @@
         <div class="ideation">
             <h1 class="case-header">Key Considerations</h1>
             <p class="body-text">As a young innovation lab, our current projects didn't have a definitive development lifecycle yet. So, moving forward, the Lab team decided
-                on what should normally be included during the start to end of a project.
+                on what should normally be included during the start to end of a project. This would help build consistency while viewing different projects.
             </p>
             <div class="pic-span-12">
                 <div class="row">
@@ -149,7 +146,7 @@
                     </div>
                     </div>
                 </div>
-                <h5 class="case-space"><span class="case-colour">Final Mockup</span></h5>
+                <h5 class="case-space"><span class="case-colour">Final Mockups</span></h5>
                 <p class="body-text">
                     This final mockup drew inspiration from other websites and design trends we explored. The context of the visual illustration was to display the Lab's active process in team contribution while working on various projects. 
                     We also now made use of all of our Lab's brand colours. In turn, we believe that this final design encompassed a better representation of our Lab.
@@ -163,5 +160,21 @@
                         <img class="persona" src="images/finalmockup_welcome.jpg">
                     </div>
                     </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="persona" src="images/pp-archivedprojects.png">
+                        </div>
+                        <div class="col-6">
+                          <img class="persona" src="images/pp-thinrows.jpg">
+                      </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-6">
+                            <img class="persona" src="images/pp-thickrows.png">
+                        </div>
+                        <div class="col-6">
+                          <img class="persona" src="images/pp-insideproject.png">
+                      </div>
+                      </div>
                 </div>   
                 </div>     
