resume change + about section

--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
                 <img id="me"src="images/about pic.jpg">
             </div>
             <div class="col-6 about-section">
-                <h1 class="hello-eyes">Hello curious eyes.</h1>
+                <h1 class="hello-eyes">Hello! :-)</h1>
                 <p class="about-text">I'm currently in my third year at the University of Waterloo, studying Kinesiology. </p>               
-                <p class="about-text">Previously, I was a UX/UI designer at the WSIB Innovation Lab. This sparked my interest in design, and ever since, i've become more keen on looking at things from a design perspective. </p>               
+                <p class="about-text">Previously, I was a UX/UI designer at the WSIB Innovation Lab. This sparked my interest in design and it's been something i've started to look out for in everyday life.</p>               
                 <p class="about-text">Besides school work and design, I love to play guitar, discover new music on Spotify, and play volleyball with friends. </p>               
 
             </div>
