--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <h1 class="my-name">Hi! I'm Brennan.</h1>
         </div>
         <div class="row intro">
-           <h5 class="blurb">I'm a designer based in Toronto, and I'm currently studying my 3A term at the University of Waterloo.</h5>
-           <h5 class="blurb">Previously, I worked at the <span id="wsibIB">WSIB Innovation Lab.</span></h5>
+           <h5 class="blurb">I'm a designer based in Toronto, and I'm currently seeking Winter 2021 internships!</h5>
+           <h5 class="blurb">Previously, I worked at the <span id="wsibIB">WSIB Innovation Lab</span> in Kitchener ON.</h5>
          </div>
 
          <div class="row projects">
